# Developing-AI-Apps-and-Agents-on-Azure

./: .gitignore  main.py  pyproject.toml
Develop AI agents on Azure/02-agent-custom-tools/: agent.py  functions.py
Develop AI agents on Azure/03-mcp-integration/: agent.py  client.py  server.py
Develop AI agents on Azure/05-agent-orchestration/: agents.py
Develop AI agents on Azure/06-build-remote-agents-with-a2a/: client.py  run_all.py
Develop AI agents on Azure/06-build-remote-agents-with-a2a/outline_agent/: agent.py  agent_executor.py  server.py
Develop AI agents on Azure/06-build-remote-agents-with-a2a/routing_agent/: agent.py  server.py
Develop AI agents on Azure/06-build-remote-agents-with-a2a/title_agent/: agent.py  server.py  (+1 more)
Develop AI agents on Azure/07-agent-framework/: agent-framework.py
Develop AI agents on Azure/08-build-workflow-ms-foundry/: workflow.py
Develop AI agents on Azure/09-integrate-agent-with-foundry-iq/: agent_client.py
Develop generative AI apps in Azure/: create_generative_ai_chat_app.py  generative_ai_app_that_uses_tools.py
Develop natural language solutions in Azure/01-analyze-text/: text-analysis.py
Develop natural language solutions in Azure/02-language-agent/: text-agent.py
Develop natural language solutions in Azure/07-translation/: translate-text.py
Extract insights from visual data on Azure/01-gen-ai-vision/: image-chat-app.py
Extract insights from visual data on Azure/02-content-understanding/: analyze-image.py
Extract insights from visual data on Azure/03-document-intelligence/: document-analysis.py
