[project]
name = "developing-ai-apps-and-agents-on-azure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "azure-ai-projects>=2.1.0",
    "azure-identity>=1.25.3",
    "openai>=2.34.0",
    "python-dotenv>=1.2.2",
]
