[project]
name = "developing-ai-apps-and-agents-on-azure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "a2a-sdk==0.3.26",
    "agent-framework>=1.2.2",
    "aiohttp>=3.13.5",
    "azure-ai-agents>=1.1.0",
    "azure-ai-projects>=2.1.0",
    "azure-ai-textanalytics>=5.4.0",
    "azure-ai-translation-text>=1.0.1",
    "azure-cognitiveservices-speech>=1.49.1",
    "azure-identity>=1.25.3",
    "fastapi>=0.133.0",
    "httpx>=0.28.1",
    "mcp>=1.27.0",
    "openai>=2.34.0",
    "opentelemetry-semantic-conventions-ai>=0.5.1",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.1",
    "starlette>=1.0.0",
    "unicorn>=2.1.4",
]
